--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -84,7 +84,7 @@
 .LoginTitle{
   color: black;
   display: flex;
-  padding-left: 2%;
+  padding-left: 1%;
   font-size: 28px;
 }
 
@@ -131,3 +131,17 @@
   justify-content: left;
   box-shadow: 3px 3px 3px grey;
 }
+
+.Sidebar{
+  background-color: white;
+  padding: 0% 2% 100% 2%;
+  font-size: large;
+  text-align: center;
+}
+
+.Sidebar td{
+  padding: auto;
+}
+
+
+
