--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,39 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #E9ECF4;
-  min-height: 100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
 
 .LoginBox{
@@ -123,24 +99,42 @@
 
 .Banner{
   background: #7F6AFF;
-  font-size: 40px;
+  font-size: 2vw;
   color: white;
-  padding-left: 3%;
   margin-top: 2%;
   display: flex;
-  justify-content: left;
+  width: auto;
+  padding-left: 3vh;
+  text-align: left;
   box-shadow: 3px 3px 3px grey;
+}
+
+.MainBody{
+  display: flex;
+  flex-direction: row;
+  height: auto;
 }
 
 .Sidebar{
   background-color: white;
-  padding: 0% 2% 100% 2%;
+  padding: 0 1vw 0 1vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
   font-size: large;
-  text-align: center;
+  align-items: center;
 }
 
-.Sidebar td{
-  padding: auto;
+.Sidebar tr td img {
+  margin-top: 2vh;
+  width: 10vh;
+}
+
+.Timeline {
+  display: flex;
+  align-items: center;
+  padding: 2vw;
 }
 
 
